--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="EntityBase.cs" />
     <Compile Include="Entry.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="ISpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
