--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -41,15 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IDataProvider.cs" />
-    <Compile Include="IStorage.cs" />
+    <Compile Include="IEntityProvider.cs" />
+    <Compile Include="Xml\CategoryRepository.cs" />
     <Compile Include="Xml\Data\Category.cs" />
     <Compile Include="Xml\Data\CategoryRelationship.cs" />
     <Compile Include="Xml\Data\Entry.cs" />
     <Compile Include="IDataAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Xml\IsoStoreAdapter.cs" />
-    <Compile Include="Xml\XmlDataAdapter.cs" />
+    <Compile Include="Xml\EntryRepository.cs" />
+    <Compile Include="Xml\IFileStorage.cs" />
+    <Compile Include="Xml\IsolatedStorage.cs" />
+    <Compile Include="Xml\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
