--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.9.4.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.9.4\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -41,13 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModule.cs" />
     <Compile Include="IEntityProvider.cs" />
+    <Compile Include="Xml\CategoryRelationRepository.cs" />
     <Compile Include="Xml\CategoryRepository.cs" />
     <Compile Include="Xml\Data\Category.cs" />
     <Compile Include="Xml\Data\CategoryRelationship.cs" />
     <Compile Include="Xml\Data\Entry.cs" />
-    <Compile Include="IDataAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml\Data\EntryCategoryRelationship.cs" />
+    <Compile Include="Xml\EntryCategoryRelationRepository.cs" />
     <Compile Include="Xml\EntryRepository.cs" />
     <Compile Include="Xml\IFileStorage.cs" />
     <Compile Include="Xml\IsolatedStorage.cs" />
@@ -58,6 +64,9 @@
       <Project>{ccd250ba-f483-4a62-880a-2f208bfe3f60}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
