--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Interfaces\IUseCaseRequest.cs" />
     <Compile Include="Interfaces\IUseCaseRequestHandler.cs" />
     <Compile Include="Interfaces\UseCases\IAddEntryUseCase.cs" />
+    <Compile Include="IocProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UseCases\AddEntryUseCase.cs" />
   </ItemGroup>
