--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -48,6 +48,10 @@
     <Compile Include="CoreModule.cs" />
     <Compile Include="Dto\AddEntryRequest.cs" />
     <Compile Include="Dto\AddEntryResponse.cs" />
+    <Compile Include="Dto\DeleteEntriesRequest.cs" />
+    <Compile Include="Dto\DeleteEntriesResponse.cs" />
+    <Compile Include="Dto\GetEntriesRequest.cs" />
+    <Compile Include="Dto\GetEntriesResponse.cs" />
     <Compile Include="Dto\UseCaseResponse.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Entry.cs" />
@@ -56,10 +60,14 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUseCaseRequest.cs" />
     <Compile Include="Interfaces\IUseCaseRequestHandler.cs" />
+    <Compile Include="Interfaces\UseCases\IDeleteEntriesUseCase.cs" />
     <Compile Include="Interfaces\UseCases\IAddEntryUseCase.cs" />
+    <Compile Include="Interfaces\UseCases\IGetEntriesUseCase.cs" />
     <Compile Include="IocProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UseCases\AddEntryUseCase.cs" />
+    <Compile Include="UseCases\DeleteEntriesUseCase.cs" />
+    <Compile Include="UseCases\GetEntriesUseCase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
