--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,12 +46,18 @@
     <Compile Include="Category.cs" />
     <Compile Include="CategoryRelation.cs" />
     <Compile Include="CoreModule.cs" />
+    <Compile Include="Dto\AddCategoryRequest.cs" />
+    <Compile Include="Dto\AddCategoryResponse.cs" />
     <Compile Include="Dto\AddEntryRequest.cs" />
     <Compile Include="Dto\AddEntryResponse.cs" />
     <Compile Include="Dto\DeleteEntriesRequest.cs" />
     <Compile Include="Dto\DeleteEntriesResponse.cs" />
+    <Compile Include="Dto\GetCategoriesRequest.cs" />
+    <Compile Include="Dto\GetCategoriesResponse.cs" />
     <Compile Include="Dto\GetEntriesRequest.cs" />
     <Compile Include="Dto\GetEntriesResponse.cs" />
+    <Compile Include="Dto\UpdateCategoryRelationsRequest.cs" />
+    <Compile Include="Dto\UpdateCategoryRelationsResponse.cs" />
     <Compile Include="Dto\UseCaseResponse.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Entry.cs" />
@@ -60,14 +66,20 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUseCaseRequest.cs" />
     <Compile Include="Interfaces\IUseCaseRequestHandler.cs" />
+    <Compile Include="Interfaces\UseCases\IAddCategoryUseCase.cs" />
     <Compile Include="Interfaces\UseCases\IDeleteEntriesUseCase.cs" />
     <Compile Include="Interfaces\UseCases\IAddEntryUseCase.cs" />
+    <Compile Include="Interfaces\UseCases\IGetCategoriesUseCase.cs" />
     <Compile Include="Interfaces\UseCases\IGetEntriesUseCase.cs" />
+    <Compile Include="Interfaces\UseCases\IUpdateCategoryRelationsUseCase.cs" />
     <Compile Include="IocProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UseCases\AddCategoryUseCase.cs" />
     <Compile Include="UseCases\AddEntryUseCase.cs" />
     <Compile Include="UseCases\DeleteEntriesUseCase.cs" />
+    <Compile Include="UseCases\GetCategoriesUseCase.cs" />
     <Compile Include="UseCases\GetEntriesUseCase.cs" />
+    <Compile Include="UseCases\UpdateCategoryRelationsUseCase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
